--- a/src/pages/Auth/Auth.scss
+++ b/src/pages/Auth/Auth.scss
@@ -2,7 +2,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: calc(100vw - 50px);
+  width: calc(100vw - 0.1vw);
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -18,7 +18,7 @@
     align-items: center;
     flex-direction: column;
     gap: clamp(10px,4vw,20px);
-    padding: clmap(10px,4vw,22px) 30px;
+    padding: clamp(13px,4vw,14px) 30px;
     width: auto;
   }
   &__nav{
@@ -32,5 +32,8 @@
 }
 nav{
   background-color: transparent;
+  a{
+    font-size: clamp(16px,4vw,18px);
+  }
 }
 }
